# gait_mcp

./: README.md  gait_mcp.py  pyproject.toml
.github/instructions/: instructions.md
